# Django_assignment

./: README.md
1일차/내 정보 페이지 만들기/: fake_db.py  pyproject.toml
1일차/내 정보 페이지 만들기/config/: settings.py  urls.py
1일차/내 정보 페이지 만들기/templates/: user_info.html  user_list.html
1일차/학습내용/config/: urls.py
Django_restaurant/: pyproject.toml
Django_restaurant/config/: settings.py  urls.py
Django_restaurant/restaurants/: models.py  serializers.py  tests.py  urls.py  views.py
Django_restaurant/restaurants/migrations/: 0001_initial.py
Django_restaurant/reviews/: models.py  tests.py  views.py
Django_restaurant/reviews/migrations/: 0001_initial.py  0002_initial.py
Django_restaurant/users/: models.py  tests.py  views.py
Django_restaurant/users/migrations/: 0001_initial.py
To_do_List_App/: .python-version  db.sqlite3  pyproject.toml
To_do_List_App/.secret_config/: secret.json
To_do_List_App/config/: settings.py  urls.py
To_do_List_App/static/css/: style.css
To_do_List_App/static/js/: theme-toggle.js
To_do_List_App/templates/: base.html  form-js.html  pagination.html  todo_create.html  todo_info.html  todo_list.html  todo_update.html
To_do_List_App/templates/registration/: base.html  login.html  signup_done.html  verify_failed.html  verify_success.html
To_do_List_App/todo/: admin.py  cb_views.py  forms.py  models.py  tests.py  urls.py  views.py
To_do_List_App/todo/migrations/: 0001_initial.py  0002_todo_author.py  0003_comment.py  0004_todo_completed_image_todo_thumbnail.py
To_do_List_App/users/: cb_views.py  forms.py  models.py  urls.py  views.py
To_do_List_App/users/migrations/: 0001_initial.py
To_do_List_App/utils/: email.py
blog/: db.sqlite3  pyproject.toml
blog/blog/: admin.py  cb_views.py  fbv_urls.py  forms.py  models.py  urls.py  views.py
blog/blog/migrations/: 0001_initial.py  0002_alter_blog_options_blog_author.py  0003_alter_blog_category.py  0004_comment.py  0005_alter_comment_options.py  0006_blog_image.py  0007_blog_thumbnail.py
blog/config/: settings.py  urls.py
blog/member/: views.py
blog/templates/: base.html  pagination.html  test_get.html  test_post.html
blog/templates/blog/: blog_create.html  blog_detail.html  blog_form.html  blog_list.html  blog_update.html
blog/templates/registration/: login.html  signup.html
blog/utils/: models.py
bookmark/: db.sqlite3  pyproject.toml
bookmark/bookmark/: admin.py  models.py  views.py
bookmark/bookmark/migrations/: 0001_initial.py
bookmark/config/: settings.py  urls.py
pystagram/: .gitignore  db.sqlite3  pyproject.toml
pystagram/config/: settings.py  urls.py
pystagram/member/: forms.py  models.py  views.py
pystagram/member/migrations/: 0001_initial.py
pystagram/templates/: base.html
pystagram/templates/auth/: email_verified_done.html  login.html  not_verified.html  signup.html  signup_done.html
pystagram/templates/include/: form.html
pystagram/utils/: email.py
rest-blog/: .python-version  db.sqlite3  pyproject.toml  requirements.txt
rest-blog/blog/: models.py  serializers.py
rest-blog/blog/migrations/: 0001_initial.py  0002_alter_blog_published_at_comment.py
rest-blog/blog/tests/: model_test.py  view_test.py
rest-blog/blog/urls/: api_urls.py  generics_urls.py  view_set_urls.py
rest-blog/blog/views/: api_view_set_views.py  api_views.py  generics_views.py  views.py
rest-blog/config/: local.py  prod.py  schema.py  settings.py  urls.py
rest-blog/user/: serializers.py  views.py
rest-blog/utils/: models.py
