[tool.poetry]
name = "oz-bookmark"
version = "0.1.0"
description = ""
authors = ["woojin <dkswoojin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
ipython = "^8.26.0"
django-extensions = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
